--- a/estilo.css
+++ b/estilo.css
@@ -75,6 +75,7 @@ header>p {
 
 
 nav {
+    padding-top: 20px;
     padding-bottom: 15px;
     padding-left: 15px;
     background-color: var(--cor5);
@@ -85,7 +86,7 @@ nav {
 nav>a {
     text-decoration: none;
     color: var(--cor1);
-    padding: 10px;
+    padding: 20px;
     font-weight: bold;
     transition-duration: .25s;
 }
